Fix T59587: Hair dynamics works different when opened in 2.8

Is a missing do-verisoning code in e3d31b8dfbd.

Unfortunately, at this point it is rather tricky to tell old and new
hair dynamics modifiers apart. Probably easier to accept possible
breackage of the files which were created in 2.7 and saved during
2.8 which had incomplete do-version code.